--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
+    "vuetify-datetime-picker": "^2.1.1",
+    "vuetify-datetime-picker-mdi": "^2.1.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
